--- a/tally/templates/tally/base.html
+++ b/tally/templates/tally/base.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <title>Tally Dashboard</title>
-        <link href="{% static "tally/css/bootstrap.min.css" %}" rel="stylesheet" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous" />
         <link href="{% static "tally/css/tally.css" %}" rel="stylesheet" />
     </head>
     <body>
@@ -22,9 +22,9 @@
             {% block content %}
             {% endblock %}
         </div>
-        <script src="{% static "tally/js/jquery-1.11.1.min.js" %}"></script>
-        <script src="{% static "tally/js/bootstrap.min.js" %}"></script>
-        <script src="{% static "tally/js/d3.v3.min.js" %}"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+        <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="{% static "tally/js/tally.js" %}"></script>
     </body>
 </html>
